--- a/less/lists.less
+++ b/less/lists.less
@@ -1,17 +1,3 @@
-// Remove default styles from certain elements when they are in a list.
-li {
-
-    h2, h3, h4, h5, h6 {
-        border: none;
-        margin: 0;
-        display: inline-block;
-    }
-
-    p {
-        margin: @spacing / 1.5 0;
-    }
-}
-
 // Definition lists.
 dl {
 
@@ -65,14 +51,26 @@ ol {
     ol {
             
         li {
-            margin: 0.5rem 0 0.5rem @spacing * 1.5;
+            position: relative;
+            margin: @spacing / 4 0 @spacing / 4 @spacing * 1.5;
+            padding-left: @spacing * 2.5;
 
             p {
-                display: inline-block;
+                
+                &:first-of-type {
+                    margin-top: 0;
+                }
+
+                &:last-of-type {
+                    margin-bottom: 0;
+                }
             }
             
             &:before {
                 font-size: @font-size;
+                position: absolute;
+                top: @spacing - 5;
+                left: 0;
             }
 
             &:first-of-type {
@@ -85,16 +83,27 @@ ol {
     ul {
             
         li {
-            margin: 0.5rem 0 0.5rem @spacing * 1.5;
+            position: relative;
+            margin: @spacing / 4 0 @spacing / 4 @spacing * 1.5;
+            padding-left: @spacing * 2.5;
 
             p {
-                display: inline-block;
+
+                &:first-of-type {
+                    margin-top: 0;
+                }
+
+                &:last-of-type {
+                    margin-bottom: 0;
+                }
             }
             
             &:before {
                 content: '\2299';
                 font-size: @font-size;
-                margin-top: -5px;
+                position: absolute;
+                top: @spacing * 2 + 5;
+                left: 0;
             }
 
             &:first-of-type {
@@ -160,20 +169,30 @@ ul {
         }
     }
 
-    // Nested lists: ul > ul
-    ul {
+    // Nested lists: ol > ol
+    ol {
             
         li {
-            margin: 0.5rem 0 0.5rem @spacing * 1.5;
+            position: relative;
+            margin: @spacing / 4 0 @spacing / 4 @spacing * 1.5;
+            padding-left: @spacing * 2.5;
 
             p {
-                display: inline-block;
+                
+                &:first-of-type {
+                    margin-top: 0;
+                }
+
+                &:last-of-type {
+                    margin-bottom: 0;
+                }
             }
             
             &:before {
-                content: '\2299';
                 font-size: @font-size;
-                vertical-align: text-top;
+                position: absolute;
+                top: @spacing - 5;
+                left: 0;
             }
 
             &:first-of-type {
@@ -182,19 +201,31 @@ ul {
         }
     }
 
-    // Nested lists: ul > ol
-    ol {
+    // Nested lists: ol > ul
+    ul {
             
         li {
-            margin: 0.5rem 0 0.5rem @spacing * 1.5;
+            position: relative;
+            margin: @spacing / 4 0 @spacing / 4 @spacing * 1.5;
+            padding-left: @spacing * 2.5;
 
             p {
-                display: inline-block;
+
+                &:first-of-type {
+                    margin-top: 0;
+                }
+
+                &:last-of-type {
+                    margin-bottom: 0;
+                }
             }
             
             &:before {
+                content: '\2299';
                 font-size: @font-size;
-                vertical-align: text-top;
+                position: absolute;
+                top: @spacing * 2 + 5;
+                left: 0;
             }
 
             &:first-of-type {
@@ -231,5 +262,34 @@ ul {
         li {
             margin: 0.5rem 0 0.5rem @spacing * 2;
         }
+    }
+}
+
+// Remove default styles from certain elements when they are in a list or nested in a list.
+li {
+
+    h2, h3, h4, h5, h6 {
+        border: none;
+        margin: 0;
+        display: inline-block;
+    }
+
+    p {
+        margin: @spacing / 1.5 0;
+    }
+
+    li {
+
+        h2, h3, h4, h5, h6 {
+            display: inline-block;
+            font-weight: bold;
+            font-size: @font-size;
+            color: @primary-font-color;
+
+            &+ p {
+                display: block;
+            }
+        }
+
     }
 }
